--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit==1.28.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
+streamlit>=1.28.1
+python-dateutil>=2.8.2
 Pillow>=9.5.0
 markdown>=3.4.3
-requests>=2.31.0
-protobuf>=3.20.0
-watchdog>=3.0.0
